Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-09-05 (SVN):
    * sdl_inc.h: require SDL at least 1.2.14 for Mac OS X

2012-09-05 (SVN):
    * utils/common/threads.c: more GetNumCPUS() fixes for OSX and BSD.
      also made sure that it returns only 1 on ancient windows versions.

2012-09-05 (SVN):
    * eliminated spaces from macosx binaries names.
    * updated the version date stamp to 2012-09-05.

2012-09-04 (SVN):
    * added explicit int casts when printing GLint values, because some
      older SDKs define GLint as long instead of int, e.g. Mac OSX SDKs
      10.4 and older. removed static versions of osx codec import libs.
      renamed osx codec dylib import lib directory to be lib.

2012-09-03 (SVN):
    * updated the version date stamp to 2012-09-03.

2012-09-03 (SVN):
    * Makefiles: -mmacosx-version-min also needs to be among the linker
      flags for darwin x86_64 builds. adjusted accordingly.
    * Makefiles: cleaned up for darwin (osx) builds. other tidy-ups.
    * build_cross_osx.sh: added darwin cross-compile scripts all over.

2012-09-02 (SVN):
    * utils/common/threads.c: fixed OSX version of Thread_GetNumCPUS().

2012-08-31 (SVN):
    * engine/h2shared/quakefs.c, launcher/games.c: added details about
      the known hexen2 pak files. minor clean-ups.
    * engine/h2shared/h2config.h: undefine H2MP for demo-specific builds
    * updated version date stamp to 2012-08-31.

2012-08-29 (SVN):
    * engine/hexen2: move Makefile.sv under the server subdirectory and
      add missing osx flags. adjust the existing cross-compile scripts.
      add new cross-compile scripts under the server subdirectory.
    * engine/hexenworld/server: add missing osx flags to the Makefile.
      add new osx cross-compile script.
    * rpm spec file: adjust after moved Makefile.sv.

2012-08-29 (SVN):
    * Makefiles for jsh2color, light, vis: store the pthread flags in